# geo-content-writer

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt
agents/: openai.yaml
examples/: brand-snapshot.md  content-pack-compact.md  content-pack.md  fanout-backlog-trip.json  first-asset-draft-brand-aware.md  first-asset-draft.md  live-30-day-example.md  publish-ready-article.md  publish-ready-payload-trip.json  publish-ready-trip-article.md  workflow-diagnostic-trip.md
references/: pipeline-spec.md
schemas/: brand_knowledge_base_schema.json
skills/: content-writer.md  geo-content-opportunity-engine.md
src/geo_content_opportunity_engine/: __init__.py  cli.py
src/geo_content_writer/: __init__.py  citation_crawl.py  cli.py  client.py  wordpress.py  workflows.py
